Se cambia el color de la fuente

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -13,7 +13,7 @@
                         <p class="text-sm text-purple-300 mb-3">2024 - Presente</p>
                         <ul>
                             <li>
-                                <span class="font-semibold text-blue-300">Empresa:</span> Complementos Humanos S.A.
+                                <span class="font-semibold text-blue-400">Empresa:</span> Complementos Humanos S.A.
                             </li>
                         </ul>
                         <p class="text-gray-300">Participación activa en el desarrollo y mantenimiento de las aplicaciones. Gestión de bases de datos y participación en las interfaces front-end con diferentes frameworks</p>
@@ -44,18 +44,9 @@
                         </div>
                     </div>
                 </div>
-
-                <div class="timeline-item" data-aos="fade-up" data-aos-delay="200">
-                    <div class="neon-border rounded-lg p-6 backdrop-blur-sm bg-opacity-30 bg-black">
-                        <h3 class="text-xl font-bold mb-1 text-blue-400">Aqui que pongo?</h3>
-                        <p class="text-sm text-purple-300 mb-3">2024 - Actualmente</p>
-                        <p class="text-gray-300">Se aplican desarrollos en comunidades cercanas para proyectos personales y colaborar con mas desarrolladores</p>
-                        <div class="flex flex-wrap gap-2 mt-4">
-                            <span class="text-xs px-3 py-1 rounded-full bg-blue-900 bg-opacity-30 text-blue-300 border border-blue-500">Vue.js</span>
-                            <span class="text-xs px-3 py-1 rounded-full bg-purple-900 bg-opacity-30 text-purple-300 border border-purple-500">TailwindCSS</span>
-                            <span class="text-xs px-3 py-1 rounded-full bg-blue-900 bg-opacity-30 text-blue-300 border border-blue-500">TypeScript</span>
-                        </div>
-                    </div>
-                </div>
+                <!-- AQUI VA MAS EXPERIENCIA --> 
+                <!-- <div class="timeline-item" data-aos="fade-up" data-aos-delay="200">
+                </div> -->
+                <!-- AQUI VA MAS EXPERIENCIA -->
             </div>
         </div>
