Se agrega etiqueta

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,7 +16,7 @@
         </a>
     </div>
     <div class="mt-8 text-gray-500 text-sm">
-        &copy; 2025 Portafolio Santiago Orrego Toro. Todos los derechos reservados.
+       <p>&copy; 2025 Portafolio Santiago Orrego Toro. Todos los derechos reservados.</p>
     </div>
 </div>
 </footer>
