--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,3 +1,7 @@
+---
+import { Image } from 'astro:assets';
+import MiPerfil from '../assets/images/imagen-perfil.png';
+---
 <div class="hero-particles" id="particles-container"></div>
     <div class="container mx-auto px-4">
         <div class="flex flex-col md:flex-row items-center justify-between gap-12">
@@ -6,13 +10,13 @@
                     <span class="block">Desarrollador</span>
                     <span class="text-transparent bg-clip-text bg-gradient-to-r from-blue-400 to-purple-500">FullStack</span>
                 </h1>
-                <p class="text-lg text-gray-300 mb-8">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-                <a href="/public/cv/Hoja de vida santiago.pdf" target="_blank" rel="noopener noreferrer" class="neon-button">Descargar cv</a>
+                <p class="text-lg text-gray-300 mb-8">Soy desarrollador Fullstack Junior, apasionado por asumir nuevos retos y en constante aprendizaje. Me motiva explorar nuevas tecnologías, mejorar mis habilidades cada día y crear soluciones que generen impacto.</p>
+                <a href="/public/cv/Hoja de vida santiago.pdf" target="_blank" rel="noopener noreferrer" class="neon-button">Ver cv</a>
             </div>
             <div class="md:w-1/2 relative" data-aos="fade-left" data-aos-duration="1000">
                 <div class="relative w-64 h-64 md:w-96 md:h-96 mx-auto">
                     <div class="absolute inset-0 rounded-full bg-gradient-to-r from-blue-500 to-purple-500 opacity-20 blur-xl"></div>
-                    <img src="https://cdn.pixabay.com/photo/2021/02/08/15/44/technology-5995568_960_720.jpg" alt="Desarrollador" class="rounded-full w-full h-full object-cover relative z-10 border-4 border-gray-800">
+                    <Image src= { MiPerfil } alt="mi-perfil" class="rounded-full w-full h-full object-cover relative z-10 border-4 border-gray-800" />
                 </div>
             </div>
     </div>
