--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -2,6 +2,7 @@
 import { Image } from 'astro:assets';
 import ProjectSena from '../assets/images/prueba-tecnica.png';
 import ProjectEcomerce from '../assets/images/proyecto-e-commerce.png';
+import ProjectRickAndMorty from '../assets/images/rick-and-morty.avif';
 ---
 
 <div class="container mx-auto px-4">
@@ -16,7 +17,7 @@ import ProjectEcomerce from '../assets/images/proyecto-e-commerce.png';
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
         <div class="project-card neon-border rounded-lg overflow-hidden" data-aos="fade-up" data-aos-delay="100">
             <div class="relative overflow-hidden">
-                <img src="https://imagenes.elpais.com/resizer/v2/LKBJXYFNZFA4ZOPCAUZZBXZMQA.PNG?auth=429b10f40ff0ee1509f1ef07435def58604af49cc225918adec47505bcfac68f&width=1200" alt="Proyecto Rick And Morty" class="w-full h-48 object-cover">
+                <Image src= { ProjectRickAndMorty } alt="Proyecto Rick And Morty" class="w-full h-48 object-cover" />
                 <div class="absolute inset-0 bg-gradient-to-t from-black to-transparent"></div>
             </div>
             <div class="p-6">
