Cambio en los placeholder del formulario de contacto

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -13,11 +13,11 @@
                     <form id="contact-form" class="space-y-6">
                         <div>
                             <label for="name" class="block text-gray-300 mb-2">Nombre</label>
-                            <input type="text" id="name" name="name" class="neon-input w-full px-4 py-3 rounded-lg focus:outline-none" placeholder="Tu nombre" required>
+                            <input type="text" id="name" name="name" class="neon-input w-full px-4 py-3 rounded-lg focus:outline-none" placeholder="¿Como te llamas?" required>
                         </div>
                         <div>
                             <label for="email_id" class="block text-gray-300 mb-2">Correo electrónico</label>
-                            <input type="text" id="email_id" name="email_id" class="neon-input w-full px-4 py-3 rounded-lg focus:outline-none" placeholder="Tu correo" required>
+                            <input type="text" id="email_id" name="email_id" class="neon-input w-full px-4 py-3 rounded-lg focus:outline-none" placeholder="Coloca tu correo" required>
                         </div>
                         <div>
                             <label for="descripcion" class="block text-gray-300 mb-2">Descripción</label>
