Se agregan iconos en la experiencia

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -41,6 +41,9 @@
                             <svg class="icon-technology" data-tippy-content="Docker">
                                 <use href="#icon-docker"></use>
                             </svg>
+                            <svg class="icon-technology" data-tippy-content="C#">
+                                <use href="#icon-c-sharp"></use>
+                            </svg>
                         </div>
                     </div>
                 </div>
