Se agregan rutas de git a los proyectos

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -34,7 +34,7 @@ import ProjectRickAndMorty from '../assets/images/rick-and-morty.avif';
                     <use href="#icon-javascript" />
                     </svg>
                 </div>
-                <a href="" class="inline-block text-blue-400 hover:text-blue-300 transition-colors">Ir al repositorio <i class="fas fa-arrow-right ml-1"></i></a>
+                <a href="https://github.com/santiagotoro46/Api-Rick-And-Morty-JS" class="inline-block text-blue-400 hover:text-blue-300 transition-colors">Ir al repositorio <i class="fas fa-arrow-right ml-1"></i></a>
             </div>
         </div>
 
@@ -60,7 +60,7 @@ import ProjectRickAndMorty from '../assets/images/rick-and-morty.avif';
                         <use href="#icon-tmdb" />
                     </svg>
                 </div>
-                <a href="" class="inline-block text-blue-400 hover:text-blue-300 transition-colors">Ir al repositorio <i class="fas fa-arrow-right ml-1"></i></a>
+                <a href="https://github.com/santiagotoro46/Prueba-Tecnica-SENA" class="inline-block text-blue-400 hover:text-blue-300 transition-colors">Ir al repositorio <i class="fas fa-arrow-right ml-1"></i></a>
             </div>
         </div>
 
