--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -11,7 +11,7 @@ import MiPerfil from '../assets/images/imagen-perfil-temp.png';
                     <span class="text-transparent bg-clip-text bg-gradient-to-r from-blue-400 to-purple-500">FullStack</span>
                 </h1>
                 <p class="text-lg text-gray-300 mb-8">Soy desarrollador Fullstack Junior, apasionado por asumir nuevos retos y en constante aprendizaje. Me motiva explorar nuevas tecnologías, mejorar mis habilidades cada día y crear soluciones que generen impacto.</p>
-                <a href="/public/cv/Hoja de vida santiago.pdf" target="_blank" rel="noopener noreferrer" class="neon-button">Ver cv</a>
+                <a href="/cv/Hoja-de-vida-santiago.pdf" target="_blank" rel="noopener noreferrer" class="neon-button">Ver cv</a>
             </div>
             <div class="md:w-1/2 relative" data-aos="fade-left" data-aos-duration="1000">
                 <div class="relative w-64 h-64 md:w-96 md:h-96 mx-auto">
