Se agrega icono de angular a la experiencia

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -32,6 +32,9 @@
                             <svg class="icon-technology" data-tippy-content="Vue">
                                 <use href="#icon-vue"></use>
                             </svg>
+                            <svg class="icon-technology" data-tippy-content="Angular">
+                                <use href="#icon-angular"></use>
+                            </svg>
                             <svg class="icon-technology" data-tippy-content="PHP">
                                 <use href="#icon-php"></use>
                             </svg>
